# adventofcode2023

./: LICENSE
day1/: pyproject.toml
day1/day1/: program.py
day1/tests/: test_program.py
day10/: program.py  test_program.py
day2/: pyproject.toml
day2/day2/: program.py
day2/tests/: test_program.py
day3/: pyproject.toml
day3/day3/: program.py
day3/tests/: test_program.py
day4/: pyproject.toml
day4/day4/: program.py
day4/tests/: test_program.py
day5/: pyproject.toml
day5/day5/: program.py  q.py
day5/tests/: test_program.py
day6/: pyproject.toml
day6/day6/: program.py
day6/tests/: test_program.py
day7/: pyproject.toml
day7/day7/: program.py
day7/tests/: test_program.py
day8/: pyproject.toml
day8/day8/: jarle.py  program.py
day8/tests/: test_program.py
day9/: pyproject.toml
day9/day9/: program.py
day9/tests/: test_program.py
