[tool.poetry]
name = "day9"
version = "0.1.0"
description = ""
authors = ["Jon Ole Hagemo <jonolehagemo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
funcy = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
